# search-engine

./: CMakeLists.txt  README.md  config.json  index.html  main.cpp  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
test/: test.cpp
